# fraud-detection

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/db/: mod.rs
backend/src/handlers/: health.rs  mod.rs  stats.rs  transaction.rs
backend/src/models/: alert.rs  mod.rs  stats.rs  transaction.rs
backend/src/services/: fraud_engine.rs  mod.rs  transaction_service.rs
backend/src/ws/: handler.rs  mod.rs
backend/tests/: transaction_tests.rs
gui/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
gui/src/: App.tsx
gui/src/components/: AlertsList.tsx  Header.tsx  StatsGrid.tsx  TransactionForm.tsx  TransactionsList.tsx
gui/src/components/__tests__/: TransactionForm.test.tsx
gui/src/hooks/: useFraudApi.ts  useTransactionForm.tsx  useWebSocket.ts
gui/src/types/: index.ts
gui/src/utils/: fraud.ts
