[package]
name = "fraud_detection"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-rt = "2.11.0"
actix-web = "4.11.0"
actix-ws = "0.3.0"
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
